.infrastructure/k8s/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: php
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: ghcr-login
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: php
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: ghcr-login
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverb
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: php
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: ghcr-login
