.infrastructure/k8s/overlays/production/seaweedfs-managed-delete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seaweedfs
$patch: delete
